Search of relevant ontologies is now performed using BioPortal Recommender service & also some minor improvements done

--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
    "jquery.autocomplete.css",
    "selectize.default.css",
    "tingle.css",
+   "style.css",
 	 "cod_complete.js"
   ],
   "manifest_version": 2
